# pixell-agent-runtime

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT_FIXES_SUMMARY.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.envoy  ENVOY_A2A_README.md  GITHUB_ACTIONS_MIGRATION.md  IMPLEMENTATION_AGENT_PACKAGE_INSTALL.md  IMPLEMENTATION_INSTALL_REQUIREMENTS.md  MANIFEST.in  README.md  RUNTIME_DEPLOYMENT.md  TEST_RESULTS_SUMMARY.md  THREE_SURFACE_RUNTIME.md  build_example_agent.py  debug_a2a_connection.py  debug_worker.py  demo_a2a_conversation.py  deployment_steps.md  envoy-simple.yaml  example-agent.apkg  improve_runtime.md  new_design_for_python_agent.md  pixell-ecosystem-architecture.md  pixell-python-agent-0.1.0.apkg  pixell_agent_runtime_prd.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_example_agent.py  setup.py  steps.md  talk_to_agent.py  test_a2a_client.py  test_a2a_connection.py  test_a2a_grpcio_fix.py  test_a2a_nlb.py  test_cache_refresh.sh  (+17 more)
.github/: README.md
deploy/: .env.example  ALB_HEALTH_CHECK.md  ARCHITECTURE_FIX.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SCRIPT_FIXES.md  IAM_POLICY.md  README.md  build-and-deploy-multipar.md  deploy.sh  ecs-task-definition-envoy.json  ecs-task-definition-template.json  ecs-task-definition.json
docs/: A2A_HYBRID_IMPLEMENTATION.md  ACTUAL_HOSTING_COSTS.md  COST_AT_SCALE_ANALYSIS.md  ENVOY_DEPLOYMENT_PLAN.md  ENVOY_DEPLOYMENT_SUMMARY.md  MARGINAL_COGS_MODEL.md  MARGINAL_COGS_QUICK_REFERENCE.md  PACKAGE_CACHING.md  PAC_INTEGRATION.md  RUNTIME_DEPLOYMENT.md  SUBPROCESS_ISOLATION_FIX_PLAN.md  VENV_TEST_SUMMARY.md  VIRTUALENV_IMPLEMENTATION_SUMMARY.md  VIRTUALENV_ISOLATION.md  deployment_preparation.md  implementation_steps.md  migration_system_design.md  mistakes_par.md  multi-par-architecture.md  multi-par-phase1-complete.md  multi-par-phase2-complete.md  multi-par-phase3-complete.md  pak_api_key.md  par_agent_porotocol_integration.md
example_agent/: a2a_service.py  agent.yaml  main.py  rest_routes.py
scripts/: deploy_envoy.sh  deploy_par.sh  enable_service_discovery.sh  setup-github-actions.sh  setup_appmesh.sh  test_a2a_connectivity.sh  test_a2a_grpc.py  test_build.sh  validate_aws_infra.sh
src/: run_supervisor.py
test_data/: test_agent.apkg
tests/: conftest.py  test_a2a_demo.py  test_a2a_health_subprocess.py  test_a2a_router.py  test_agent_app_id_extended.py  test_agent_app_id_validation.py  test_apkg_downloader.py  test_apkg_extractor.py  test_apkg_extractor_success.py  test_base_path_runtime.py  test_boot_budget_enforcement.py  test_deploy_api.py  test_e2e_container.py  test_graceful_shutdown.py  (+28 more)
(+70 files in other folders)
